# particle_system

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: AirResistance.cpp.E21C3F1C95FAC819.idx  AirResistance.h.160A9D5F8C6FB82C.idx  Attractor.cpp.2F15F2035101ECC7.idx  Attractor.cpp.6B18F8DD21897FFA.idx  Attractor.h.130B2075F21304BB.idx  Attractor.h.1424D86071E399AD.idx  Attractor.h.B790B6513CD1B65E.idx  Emitter.cpp.3E0AFAF7C91C3E35.idx  Emitter.cpp.51FACA3275AEBC38.idx  Emitter.cpp.66227AC80781EB27.idx  Emitter.h.026968D452DAD94D.idx  Emitter.h.B495707C44BC2CA0.idx  Emitter.h.F247117404B57121.idx  EmitterManager.cpp.F99DBAF1B5BDC579.idx  EmitterManager.cpp.FF6790C946842A4F.idx  EmitterManager.h.122298003D5F3984.idx  EmitterManager.h.CC08D7EEA405CE43.idx  Force.cpp.1C014A4E9453959B.idx  Force.cpp.E4A14BAD4622D093.idx  Force.h.2081D60E6240D50B.idx  Force.h.4BDDF31BE7348F06.idx  ForceManager.cpp.302716431DD6BE39.idx  ForceManager.h.6767C0FA8EF1858A.idx  FountainEmitter.cpp.B5E8EA3A33B85E0F.idx  FountainEmitter.cpp.CAB602ACB2E7DA24.idx  FountainEmitter.h.7E132BDF7E33859A.idx  FountainEmitter.h.D916085B3F6AD106.idx  Gravity.cpp.B4AC99E95FA530C2.idx  Gravity.cpp.C28B1ACCD3A2A0F2.idx  Gravity.h.0EE4EA7B2D95000D.idx  Gravity.h.34FD2515406C00FC.idx  InputManager.cpp.686F142AA736FFCB.idx  InputManager.cpp.FC86BD23F275ACC3.idx  InputManager.h.A8E13D949FC6A7F3.idx  InputManager.h.FCEB3010281825EF.idx  Particle.cpp.39BCD178A442D325.idx  Particle.cpp.3CA6457F34104FE9.idx  Particle.cpp.E931E24479FDC982.idx  Particle.h.43950B46F92B497E.idx  Particle.h.4BBCA05B974E1855.idx  (+41 more)
include/: AirResistance.h  Attractor.h  DebugPanel.h  Emitter.h  EmitterManager.h  EmitterPanel.h  Force.h  ForceManager.h  ForcePanel.h  FountainEmitter.h  Gravity.h  ImGuiManager.h  InputManager.h  Panel.h  Particle.h  PhysicsSystem.h  Renderer.h  Repulsor.h  Utility.h  Wind.h  utils.h
src/: AirResistance.cpp  Attractor.cpp  DebugPanel.cpp  Emitter.cpp  EmitterManager.cpp  EmitterPanel.cpp  Force.cpp  ForceManager.cpp  ForcePanel.cpp  FountainEmitter.cpp  Gravity.cpp  ImGuiManager.cpp  InputManager.cpp  Panel.cpp  Particle.cpp  PhysicsSystem.cpp  Renderer.cpp  Repulsor.cpp  Wind.cpp  main.cpp
